<resources>
    <string name="app_name">ElTaita</string>
    <string name="intro">Entrar</string>
    <string name="mesero">Nombre Mesero</string>
    <string name="mesas">Mesas</string>
    <string name="ordenes">Ordenes</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pedido">Pedido</string>
    <string name="enviar">Enviar</string>
    <string name="pididos">Pedidos</string>
    <string name="preparacion">Preparación</string>
    <string name="entrega">Entrega</string>
    <string name="pagar">Pagar</string>
    <string name="valor">Valor: </string>
    <string name="ordenesmesa">Orden Mesa A1</string>
    <string name="petition">Tinto: 1 // Perico: 2</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="petitionpayment">Desea pagar su orden</string>
</resources>
